--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset = "UTF-8">
+        <meta name = "viweport" content="width=device-width, initial-scale=1.0">
         <title>Trabalho DJW</title>
-        <link rel = "stylesheet" href = "style.css">
+        <link rel = "stylesheet" href = "css/style.css">
     </head>
     <body>
         <h1></h1>
