--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
         <link rel = "stylesheet" href = "css/style.css">
     </head>
     <body>
-        <h1></h1>
-    </body>
-
-
-
+        <canvas class="canvas1"></canvas>
+        <script src="js/bola.js"></script>
+        <script src="js/script.js"></script>
+      </body>
 </html>
