--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
         <meta name = "viweport" content="width=device-width, initial-scale=1.0">
         <title>Trabalho DJW</title>
         <link rel = "stylesheet" href = "css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     </head>
     <body>
-        <canvas class="canvas1"></canvas>
+        <main>
+            <h1>Battle Royale Bals</h1>
+            <canvas class="canvas1"></canvas>
+        </main>
+        
         <script src="js/bola.js"></script>
         <script src="js/script.js"></script>
       </body>
