--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     </head>
     <body>
         <main>
-            <h1>Battle Royale Bals</h1>
+            <h1>Battle Royale Balls</h1>
             <canvas class="canvas1"></canvas>
         </main>
-        
+
         <script src="js/bola.js"></script>
         <script src="js/script.js"></script>
       </body>
